# lufsgen

./: .cargo-ignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: decoders.rs  error.rs  lib.rs  lufs.rs  main.rs
src/decoders/: mp3.rs  ogg.rs  symphonia_decoder.rs  wav.rs
