[package]
name = "lufsgen-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "lufsgen_android"
path = "src/lib.rs"

[[bin]]
name = "lufsgen"
path = "src/main.rs"

[dependencies]
# Audio decoders (pure Rust, no audio output deps)
minimp3 = "0.5"
lewton = "0.10"
hound = "3.5"

ebur128 = "0.1"

# Progress bar (binary only)
indicatif = "0.17"
