[workspace]

[package]
name = "lufsgen-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "lufsgen_android"
path = "src/lib.rs"

[[bin]]
name = "lufsgen"
path = "src/main.rs"

[dependencies]
# Audio decoder - unified multimedia framework
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "aac", "isomp4", "wav"] }

ebur128 = "0.1"

# Progress bar (binary only)
indicatif = "0.17"
