[workspace]

[package]
name = "lufsgen"
version = "0.1.0"
edition = "2021"
description = "A rust crate to get LUFS of audio files."
license = "MIT"
repository = "https://github.com/Afeather2017/lufsgen"
readme = "README.md"
keywords = ["audio", "lufs", "loudness", "ebu-r128", "symphonia"]
categories = ["multimedia::audio"]

[lib]
name = "lufsgen"
path = "src/lib.rs"

[[bin]]
name = "lufsgen"
path = "src/main.rs"

[dependencies]
# Audio decoder - unified multimedia framework
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "aac", "isomp4", "wav"] }

ebur128 = "0.1"

# Progress bar (binary only)
indicatif = "0.17"
